--- a/src/main/webapp/assets/css/loginSuccess.css
+++ b/src/main/webapp/assets/css/loginSuccess.css
@@ -92,16 +92,29 @@ body{
 	color:white;
 
 }
-.flight{
-	width:100%;height:345px;
-	margin-top:50px;
+.searchFlight-in{
+	width:820px;
+	height:400px;
+	border:1px solid red;
+	position:absolute;
+	left:320px;
+	top:0;
+	overflow-y:auto;
 }
 .box{
 	width:90%;height:100%;
 	margin:auto;
 	overflow:auto;
 }
-.td{
+.d1{
+	width:80px;
+	height:20px;
+	color:red;
+	font-weight:10px;
+	font-size:20px;
+	margin:auto;
+}
+/* .td{
 	width:80px;
 	border:2px solid black;
 }
@@ -109,79 +122,11 @@ body{
 	width:132.5px;
 	border:2px solid black;
 }
-.d1{
-	display:inline-block;
-	float:left;
-	width:156.8px;height:30px;
-	font-size:24px;font-weight:bold;
-	text-align:center;
-	align-height:30px;
-	color:white;
-}
-.d2{
-	display:inline-block;
-	float:left;
-	width:156.8px;height:30px;
-	font-size:24px;font-weight:bold;
-	text-align:center;
-	align-height:30px;
-	color:white;
-}
-.d3{
-	display:inline-block;
-	float:left;
-	width:156.8px;height:30px;
-	font-size:24px;font-weight:bold;
-	text-align:center;
-	align-height:30px;
-	color:white;
-}
-.d4,.d5{
-	display:inline-block;
-	float:left;
-	width:236.2px;height:30px;
-	font-size:24px;font-weight:bold;
-	text-align:center;
-	align-height:30px;	
-	color:white;
-}
-.d6{
-	display:inline-block;
-	float:left;
-	width:132.5px;height:30px;
-	font-size:24px;font-weight:bold;
-	background:#008040;
-	text-align:center;
-	align-height:30px;	
-	color:white;
-	border-bottom:2px solid #ff0000;
-	background:#00FF00;
-}
-.d1{
-	border-bottom:2px solid #00FF00;
-	background:#ff0000;
-}
-.d2{
-	border-bottom:2px solid #0000FF;
-	background:#FF00FF;
-}
-.d3{
-	border-bottom:2px solid #FFFF00;
-	background:#00FFFF;
-}
-.d4{
-	border-bottom:2px solid #00FFFF;
-	background:#CC9900;
-}
-.d5{
-	border-bottom:2px solid #FF00FF;
-	background:#0000FF;
-}
 
 .table1{
 	float:left;
 	overflow:auto;
-}
+} */
 .box1{
 	width:80%;height:500px;
 	border:1px solid red;
@@ -232,7 +177,6 @@ tr{
 	position:absolute;
 	top:100px;left:50px;
 	background:#FFFFCC;
-	overflow:auto;
 }
 .t{
 	width:80px;
