[删除了订单表里的乘客类型字段]

--- a/src/main/webapp/assets/css/loginSuccess.css
+++ b/src/main/webapp/assets/css/loginSuccess.css
@@ -136,14 +136,14 @@ body{
 }
 
 
-.d7,.d8,.d9,.d10,.d11,.d12,.d13,.d14{
+.d7,.d8,.d9,.d10,.d12,.d13,.d14{
 	display:inline-block;
-	width:11%;height:20px;
+	width:12.6%;height:20px;
 	border:1px solid red;
 	text-align:center;
 	margin-top:10px;
 }
-.d7,.d8,.d9,.d10,.d11,.d12,.d13,.d14{
+.d7,.d8,.d9,.d10,.d12,.d13,.d14{
 	margin-right:-4px;
 }
 .d7{
