--- a/src/main/webapp/assets/css/registerView.css
+++ b/src/main/webapp/assets/css/registerView.css
@@ -1,8 +1,7 @@
 .form{
 	width:800px;height:600px;
 	position:absolute;
-	left:0;right:0;top:0;bottom:0;
-	margin:auto;
+	left:10px;right:0;top:30px;bottom:0;
 }
 .yes,.no{
 	width:100px;height:40px;
@@ -11,7 +10,7 @@
 	margin-top:50px;
 }
 .yes{
-	margin-left:330px;
+	margin-left:100px;
 }
 .yes:hover{
 	background:orange;
@@ -22,7 +21,6 @@
 
 .l1,.l2,.l3,.l4,.l5,.l6,.l7,.l8,.l9{
 	display:inline-block;
-	margin-left:130px;
 	font-size:30px;
 	font-weight:bold;
 	margin-top:20px;
